--- a/gallery.css
+++ b/gallery.css
@@ -53,7 +53,7 @@ body
 .welcome 
 {
     background-color: white;
-    height: 550px;
+    height: 300px;
     /* font-family: 'PT Sans Narrow', sans-serif; */
     font-family: 'Amatic SC';
     font-size: 55px;
@@ -65,7 +65,7 @@ body
 .slogan
 {
     position: relative;
-    top: 190px;
+    top: 50px;
     right: 0px;
 
 }
@@ -130,13 +130,12 @@ body
     margin-bottom: 0px;
 }
 
-.gallery-preview
+.gallery
 {
-    margin-left: 160px;
-    margin-right: 160px;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: white;
 }
 
 footer
@@ -191,7 +190,7 @@ h3
 
 .feature-details p
 {
-    color: #666;
+    color: rgb(34, 30, 30);
 }
 
 .feature-details h3
