--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body
     padding-right: 0%;
     padding-bottom: 0%;
     height: auto;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-style: solid;
     border-top: 0px;
     border-right: 0px;
