HUGE updates here, created whole new layout for home page, and finished the other pages as well. There is still some content that needs to be changed out (text on home page), and I still need to make it fully responsive.

--- a/index.css
+++ b/index.css
@@ -147,7 +147,13 @@ footer
 h3
 {
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
+}
+
+#lizzy-image
+{
+    width: 100%;
+    /* image-orientation: flip; */
 }
 
 #gal-description
