--- a/gallery.css
+++ b/gallery.css
@@ -9,8 +9,12 @@ html,body
 
 body 
 {
-    /* background-color: rgb(255, 255, 255); */
     background-color: rgb(252, 252, 239);
+}
+
+.good-text
+{
+    font-family: 'Open Sans Condensed', sans-serif; 
 }
 
 .header
@@ -22,9 +26,9 @@ body
     text-align: center;
     padding-top: 2%;
     padding-right: 0%;
-    padding-bottom: 0%;
+    padding-bottom: 2%;
     height: auto;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-style: solid;
     border-top: 0px;
     border-right: 0px;
@@ -41,11 +45,16 @@ body
     border-width: 2px;
 }
 
+.pixlee-widget
+{
+
+    margin-top: 1%;
+    margin-right: 1%;
+    margin-left: 1%;
+}
+
 .fa
 {
-    position: relative;
-    right: 18px;
-    top: -5px;
     margin: 8px;
     text-align: center;
 }
@@ -167,7 +176,7 @@ h3
 
 #main-logo
 {
-    width: 25%;
+    width: 75%;
     text-align: center;
 }
 
@@ -176,6 +185,9 @@ h3
     font-family: 'Open Sans Condensed', sans-serif; 
     position: relative;
     font-size: 17px;
+    text-decoration: none !important;
+    color: black !important;
+    top: 50%;
 }
 
 .featured-title
@@ -231,38 +243,6 @@ h3
     background-color: rgb(252, 252, 239);
 }
 
-#home-link
-{
-    left: -250px;
-    bottom: -15px;
-    text-decoration: none;
-    /* color: rgb(170, 165, 165); */
-    color: black;
-}
-
-#product-link
-{
-    left: -150px;
-    bottom: -15px;
-    text-decoration: none;
-    color: black;
-}
-
-#gallery-link
-{
-    right: -150px;
-    bottom: -15px;
-    text-decoration: none;
-    color: black;
-}
-
-#contact-link
-{
-    right: -250px;
-    bottom: -15px;
-    text-decoration: none;
-    color: black;
-}
 
 #featured1
 {
