--- a/contact.css
+++ b/contact.css
@@ -1,15 +1,31 @@
-html,body
+@media only screen and (min-width: 1500px)
+{ 
+
+    #welcome
+    {
+        height:700px;
+    }
+
+    #about-section
+    {
+        margin-left:25%;
+        margin-right:25%;
+    }
+}
+
+html
 {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 body 
 {
-    background-color: rgb(252, 252, 239);
+    /* background-color: rgb(252, 252, 239); */
+    background-color: white;
 }
 
 .good-text
@@ -290,6 +306,65 @@ h3
     padding-bottom: 20px;
 }
 
+.footer
+{
+    /* background-color: rgb(252, 252, 239); */
+    background-color: #666;
+    color:white !important;
+}
+
+#phone
+{
+    display:none;
+}
+
+.header-small
+{
+    height:auto;
+    display:none;
+}
+
+@media only screen and (max-width: 600px)
+{
+    .header
+    {
+        display:none;
+    }
+
+    .header-small
+    {
+        display:inline;
+
+    }
+
+    .fa
+    {
+        position: relative;
+        margin:8px;
+    }
+
+    #home-link, #product-link, #gallery-link, #contact-link
+    {
+        display:none;
+    }
+
+    #phone
+    {
+        display:inline;
+    }
+
+    #main-logo
+    {
+        width: 60%;
+        text-align: center;
+        position:relative;
+    }
+
+    .bounce-arrow
+    {
+        display:none;
+    }
+}
 
 /* Bob */
 @-webkit-keyframes hvr-bob {
@@ -308,16 +383,16 @@ h3
   }
   @keyframes hvr-bob {
     0% {
-      -webkit-transform: translateY(-8px);
-      transform: translateY(-8px);
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
     50% {
       -webkit-transform: translateY(-4px);
       transform: translateY(-4px);
     }
     100% {
-      -webkit-transform: translateY(-8px);
-      transform: translateY(-8px);
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
   }
   @-webkit-keyframes hvr-bob-float {
@@ -358,6 +433,53 @@ h3
     border-top: 0px;
     border-right: 0px;
     border-left: 0px;
+  }
+
+  .hvr-bob-arrow-top {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-animation-name: hvr-bob-float, hvr-bob;
+    animation-name: hvr-bob-float, hvr-bob;
+    -webkit-animation-duration: .3s, 1.5s;
+    animation-duration: .3s, 1.5s;
+    -webkit-animation-delay: 0s, .3s;
+    animation-delay: 0s, .3s;
+    -webkit-animation-timing-function: ease-out, ease-in-out;
+    animation-timing-function: ease-out, ease-in-out;
+    -webkit-animation-iteration-count: 1, infinite;
+    animation-iteration-count: 1, infinite;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-direction: normal, alternate;
+    animation-direction: normal, alternate;
+    position:relative;
+    margin-bottom:-45%;
+  }
+  
+  .hvr-bob-arrow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-animation-name: hvr-bob-float, hvr-bob;
+    animation-name: hvr-bob-float, hvr-bob;
+    -webkit-animation-duration: .3s, 1.5s;
+    animation-duration: .3s, 1.5s;
+    -webkit-animation-delay: 0s, .3s;
+    animation-delay: 0s, .3s;
+    -webkit-animation-timing-function: ease-out, ease-in-out;
+    animation-timing-function: ease-out, ease-in-out;
+    -webkit-animation-iteration-count: 1, infinite;
+    animation-iteration-count: 1, infinite;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-direction: normal, alternate;
+    animation-direction: normal, alternate;
+    color:black;
   }
 
   /* Shrink */
