--- a/Christmas/gallery.css
+++ b/Christmas/gallery.css
@@ -3,7 +3,7 @@
 
     #welcome
     {
-        height:700px;
+        height:300px;
     }
 
     #about-section
@@ -11,37 +11,6 @@
         margin-left:25%;
         margin-right:25%;
     }
-}
-
-@media only screen and (max-width: 800px)
-{ 
-
-    #welcome
-    {
-        height:300px;
-        font-size:30px;
-    }
-    #slogan
-    {
-    position: relative;
-    top: 120px;
-    right: 0px;
-
-    }
-}
-
-
-.welcome 
-{
-    background-color: white;
-    height: 525px;
-    font-family: 'Amatic SC';
-    font-size: 60px;
-    color: white;
-    /* background-image: url("./image-assets/macrame2edit.jpg"); */
-    background-image: url("./fromAirdrop/IMG_3226.jpg");
-    image-orientation: from-image;
-    background-size: cover;
 }
 
 
@@ -66,30 +35,52 @@ body
     font-family: 'Open Sans Condensed', sans-serif; 
 }
 
+.banner
+{
+    position:fixed;
+    bottom:0%;
+    right:0%;
+    height:250px;
+    width:210px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    background-image: url('./image-assets/plantPop.png');
+
+}
+
 .header
 {
     color: black;
     /* font-family: 'Satisfy', cursive; */
     /* font-family: 'Dancing Script', cursive; */
     /* font-family: 'Open Sans Condensed', sans-serif;  */
-    width:100%;
     text-align: center;
     padding-top: 2%;
     padding-right: 0%;
-    padding-bottom: 2%;;
+    padding-bottom: 2%;
     background-color: rgb(255, 255, 255);
-
 }
 
 #big-row
 {
-    transition: all 0.8s !important;
+    transition: all 0.2s !important;
     height:90px;
 }
 
 .header-border
 {
     border-bottom: 1px solid #666;
+}
+
+@media only screen and (min-width: 600px)
+{
+    .header
+    {
+        position: fixed;
+        top:0px;
+        z-index: 999;
+    }
 }
 
 .top-border
@@ -102,28 +93,25 @@ body
     border-width: 2px;
 }
 
-@media only screen and (min-width: 600px)
+.pixlee-widget
 {
-    .fa
-    {
-        margin: 8px;
-        text-align: center;
-        transition: all 0.8s !important;
-        
-    } 
 
-    .header
-    {
-        position: fixed;
-        top:0px;
-        z-index: 999;
-    }
+    margin-top: 1%;
+    margin-right: 1%;
+    margin-left: 1%;
+}
+
+.fa
+{
+    margin: 8px;
+    text-align: center;
 }
 
 .welcome 
 {
     background-color: white;
-    height: 525px;
+    height: 300px;
+    /* font-family: 'PT Sans Narrow', sans-serif; */
     font-family: 'Amatic SC';
     font-size: 60px;
     color: white;
@@ -136,7 +124,7 @@ body
 .slogan
 {
     position: relative;
-    top: 180px;
+    top: 50px;
     right: 0px;
 
 }
@@ -148,7 +136,12 @@ body
     position: relative;
     top: 0px;
     bottom: 0px;
-    height: 50px;
+    /* border-style: solid;
+    border-color: grey;
+    border-right: 0px;
+    border-left: 0px; 
+    border-top: 0px; */
+    height: 100px;
     color: black;
 }
 
@@ -156,65 +149,91 @@ body
 {
     font-size: 16px;
 }
+/* .feature a
+{
+    text-decoration: none !important;
+    color: black !important;
+} */
 
 .white
 {
     background-color: white;
-    /* background-image: url('./image-assets/cactus-background.jpg') */
+}
+
+.stars
+{
+    position: relative;
+    left: 900px;
+    top: 300px;
+}
+
+.featured-section
+{
+    height: 600px;
+    background-color: antiquewhite !important;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 30px;
+    margin-bottom: 0px;
+    border-style: solid;
+    border-color: black;
 }
 
 .about
 {
     height: auto;
-    margin-left: 15%;
-    margin-right: 15%;
+    /* background-color: white; */
+    margin-left: 300px;
+    margin-right: 300px;
     margin-top: 40px;
     margin-bottom: 0px;
-    /* display:none; */
 }
 
-.gallery-preview
+.gallery
 {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-top: 0px;
     margin-bottom: 0px;
-    /* background-color: white; */
+}
+
+footer
+{
+    background-color: white;
 }
 
 h3
 {
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 40px;
+    font-size: 35px;
+}
+
+#gal-description
+{
+    font-size: 12px;
+    color: grey;
 }
 
 #gal-image
 {
-    width: 90%;
-    float: none;
+    width: 100%;
+    float: right;
     top: 0px;
     border-style: hidden;
     border-radius: 10px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0);
 }
 
-
 #main-logo
 {
-    width: 75%;
+    width: 65%;
     text-align: center;
-    transition: all 0.3s !important;
-}
-
-.row
-{
-    transition: all 0.8s !important;
+    transition: all 0.2s !important;
 }
 
 .link
 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 300;
+    font-family: 'Open Sans Condensed', sans-serif; 
     position: relative;
     font-size: 17px;
     text-decoration: none !important;
@@ -222,17 +241,9 @@ h3
     top: 50%;
 }
 
-.feature-details p
+.row
 {
-    color: #666;
-}
-
-.feature-details h3
-{
-    color: rgb(0, 0, 0);
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 25px;
-    font-weight: bolder;
+    transition: all 0.2s !important;
 }
 
 #learn-more
@@ -243,24 +254,20 @@ h3
     border-color: black;
     color: black;
     border-width: 2px;
-    padding: 10px;
+    padding: 5px;
     background-color: rgb(252, 252, 239);
 }
 
-.additional-info
+.buy-now
 {
-    margin-right: 15%;
-    margin-left: 15%;
-    height: auto;
-}
-
-.get-in-touch
-{
-    height: auto;
-    top: 5%;
-    bottom: 10%;
-    margin-left: 5%;
-    margin-right: 5%;
+    color: black;
+    position: relative;
+    top: 60px;
+    left: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .footer
@@ -268,11 +275,6 @@ h3
     /* background-color: rgb(252, 252, 239); */
     background-color: #666;
     color:white !important;
-}
-
-.collapsible .collapsible-body p
-{
-    color: #666;
 }
 
 #phone
@@ -289,39 +291,9 @@ h3
     background-color: white;
 }
 
-/* .fa-bars
-{
-    position: relative;
-    top:40%;
-} */
-
-#big-social
+.small-section
 {
     display:none;
-}
-
-#small-social
-{
-    display:none;
-}
-
-#stacked-social
-{
-    display:none;
-}
-
-@media only screen and (max-width: 575px)
-{
-    #gal-image
-    {
-        width:60%;
-    }
-
-    #bottom-gal
-    {
-        display:none;
-    }
-
 }
 
 @media only screen and (max-width: 600px)
@@ -366,25 +338,30 @@ h3
     }
 }
 
-@media only screen and (min-width: 900px)
+@media only screen and (max-width: 1025px)
 {
-    #big-social
+    .small-section
     {
         display:inline;
     }
+
+    .pixlee-widget
+    {
+        display:none;
+    }
+}
+
+@media only screen and (min-width: 900px)
+{
     .under-fixed
     {
         position:relative;
-        margin-top:180px;
+        margin-top:12%;
     }
 }
 
 @media only screen and (max-width: 899px)
 {
-    #small-social
-    {
-        display:inline;
-    }
     .under-fixed
     {
         position:relative;
@@ -401,35 +378,6 @@ h3
     }
 }
 
-
-
-@media only screen and (max-width: 500px)
-{
-    #stacked-social
-    {
-        display:inline;
-    }
-
-    #small-social
-    {
-        display:none;
-    }
-
-}
-
-/* @keyframes bouncing {
-    0% {bottom: 0;}
-    50% {bottom: 25px;}
-    100% {bottom: 0;}
-}
-
-.arrow {
-    animation: bouncing 2s infinite ease-in-out;
-    bottom: 0;
-    display: block;
-    position: relative;
-    width: 80px;
-} */
 
 /* Bob */
 @-webkit-keyframes hvr-bob {
@@ -448,16 +396,16 @@ h3
   }
   @keyframes hvr-bob {
     0% {
-      -webkit-transform: translateY(-10px);
-      transform: translateY(-10px);
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
     }
     50% {
       -webkit-transform: translateY(-4px);
       transform: translateY(-4px);
     }
     100% {
-      -webkit-transform: translateY(-10px);
-      transform: translateY(-10px);
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
     }
   }
   @-webkit-keyframes hvr-bob-float {
@@ -498,53 +446,6 @@ h3
     border-top: 0px;
     border-right: 0px;
     border-left: 0px;
-  }
-
-  .hvr-bob-arrow-top {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-animation-name: hvr-bob-float, hvr-bob;
-    animation-name: hvr-bob-float, hvr-bob;
-    -webkit-animation-duration: .3s, 1.5s;
-    animation-duration: .3s, 1.5s;
-    -webkit-animation-delay: 0s, .3s;
-    animation-delay: 0s, .3s;
-    -webkit-animation-timing-function: ease-out, ease-in-out;
-    animation-timing-function: ease-out, ease-in-out;
-    -webkit-animation-iteration-count: 1, infinite;
-    animation-iteration-count: 1, infinite;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-direction: normal, alternate;
-    animation-direction: normal, alternate;
-    position:relative;
-    margin-bottom:-45%;
-  }
-  
-  .hvr-bob-arrow {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-animation-name: hvr-bob-float, hvr-bob;
-    animation-name: hvr-bob-float, hvr-bob;
-    -webkit-animation-duration: .3s, 1.5s;
-    animation-duration: .3s, 1.5s;
-    -webkit-animation-delay: 0s, .3s;
-    animation-delay: 0s, .3s;
-    -webkit-animation-timing-function: ease-out, ease-in-out;
-    animation-timing-function: ease-out, ease-in-out;
-    -webkit-animation-iteration-count: 1, infinite;
-    animation-iteration-count: 1, infinite;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-direction: normal, alternate;
-    animation-direction: normal, alternate;
-    color:black;
   }
 
   /* Shrink */
