--- a/Christmas/home.css
+++ b/Christmas/home.css
@@ -13,7 +13,7 @@
     }
 }
 
-@media only screen and (max-width: 800px)
+@media only screen and (max-width: 899px)
 { 
 
     #welcome
@@ -24,17 +24,31 @@
     #slogan
     {
     position: relative;
-    top: 120px;
+    top: 120%;
     right: 0px;
 
     }
+}
+
+.banner
+{
+    position:fixed;
+    bottom:0%;
+    right:0%;
+    height:250px;
+    width:210px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    background-image: url('./image-assets/plantPop.png');
+
 }
 
 
 .welcome 
 {
     background-color: white;
-    height: 525px;
+    height: 500px;
     font-family: 'Amatic SC';
     font-size: 60px;
     color: white;
@@ -76,14 +90,13 @@ body
     text-align: center;
     padding-top: 2%;
     padding-right: 0%;
-    padding-bottom: 2%;;
     background-color: rgb(255, 255, 255);
 
 }
 
 #big-row
 {
-    transition: all 0.8s !important;
+    transition: all 0.2s !important;
     height:90px;
 }
 
@@ -108,7 +121,7 @@ body
     {
         margin: 8px;
         text-align: center;
-        transition: all 0.8s !important;
+        transition: all 0.2s !important;
         
     } 
 
@@ -136,7 +149,7 @@ body
 .slogan
 {
     position: relative;
-    top: 180px;
+    top: 140%;
     right: 0px;
 
 }
@@ -201,14 +214,14 @@ h3
 
 #main-logo
 {
-    width: 75%;
+    width: 65%;
     text-align: center;
-    transition: all 0.3s !important;
+    transition: all 0.2s !important;
 }
 
 .row
 {
-    transition: all 0.8s !important;
+    transition: all 0.2s !important;
 }
 
 .link
@@ -219,7 +232,7 @@ h3
     font-size: 17px;
     text-decoration: none !important;
     color: black !important;
-    top: 50%;
+    top: 25%;
 }
 
 .feature-details p
@@ -364,6 +377,12 @@ h3
     {
         display:none;
     }
+    #banner
+    {
+        position:relative;
+        padding-top:20px !important;
+        font-size: 15px !important;
+    }
 }
 
 @media only screen and (min-width: 900px)
@@ -375,7 +394,7 @@ h3
     .under-fixed
     {
         position:relative;
-        margin-top:180px;
+        margin-top:8%;
     }
 }
 
@@ -388,7 +407,7 @@ h3
     .under-fixed
     {
         position:relative;
-        margin-top:120px;
+        margin-top:20%;
     }
 }
 
@@ -397,8 +416,14 @@ h3
     .under-fixed
     {
         position:relative;
-        margin-top:200px;
+        margin-top:25%;
     }
+    #banner
+    {
+        position:relative;
+        top:-15px !important;
+    }
+
 }
 
 
@@ -414,6 +439,12 @@ h3
     {
         display:none;
     }
+    .under-fixed
+    {
+        position:relative;
+        margin-top:50%;
+    }
+    
 
 }
 
