--- a/home.css
+++ b/home.css
@@ -38,8 +38,8 @@
     font-family: 'Amatic SC';
     font-size: 60px;
     color: white;
-    /* background-image: url("./image-assets/macrame2edit.jpg"); */
-    background-image: url("./fromAirdrop/IMG_3226.jpg");
+    background-image: url("./image-assets/macrame2edit.jpg");
+    /* background-image: url("./fromAirdrop/IMG_3226.jpg"); */
     image-orientation: from-image;
     background-size: cover;
 }
@@ -127,8 +127,8 @@ body
     font-family: 'Amatic SC';
     font-size: 60px;
     color: white;
-    /* background-image: url("./image-assets/macrame2edit.jpg"); */
-    background-image: url("./fromAirdrop/IMG_3226.jpg");
+    background-image: url("./image-assets/macrame2edit.jpg");
+    /* background-image: url("./fromAirdrop/IMG_3226.jpg"); */
     image-orientation: from-image;
     background-size: cover;
 }
